# document_to_speech

./: README.md  app.py  pyproject.toml  replit.nix  utils.py  worker.py
static/css/: custom.css
static/js/: app.js  dropzone-config.js
templates/: index.html  layout.html
